# research

./: .gitignore  CLAUDE.md
.claude/: settings.json
agents/: README.md
agents/legislation/acts/: README.md  context.md  data-model-reference.md  extraction-workflow.md  lessons-learned.md  ui-update-checklist.md
docs/: package-lock.json  package.json  sidebars.ts
docs/docs/act-explorer/: index.mdx
docs/docs/governance-scorecard/: audit.mdx  index.mdx  methodology.mdx
docs/src/data/: all_acts.json  (+19 more)
legislation/: docker-compose.yml
legislation/database/: research.db
legislation/ui/: Dockerfile.frontend  package.json
mcp/: .env.example  .gitignore  README.md  client.py  config.py  pyproject.toml  server.py  utils.py
mcp/prompts/: __init__.py  explore_entity.py  query_attribute.py  trace_relationships.py
mcp/resources/: __init__.py  schema.py
mcp/tools/: __init__.py  get_entity_attribute.py  get_entity_metadata.py  get_entity_relations.py  search_entities.py
meeting_tracker/: README.md  index.html  package-lock.json  package.json
meeting_tracker/src/: App.tsx  index.css  index.tsx
slas/: .gitignore  Dockerfile
slas/app/: next.config.js  package-lock.json  package.json
slas/raw_data/: 2021_grade_i.xlsx  2021_grade_ii.xlsx  2021_grade_iii.xlsx  2021_sp_grade.xlsx  2022_grade_i.xlsx  2022_grade_ii.xlsx  2022_grade_iii.xlsx  2022_sp_grade.xlsx  2023_grade_i.xlsx  2023_grade_ii.xlsx  2023_grade_iii.xlsx  2023_sp_grade.xlsx  2024_grade_i.xlsx  2024_grade_ii.xlsx  2024_grade_iii.xlsx  2024_sp_grade.xlsx
slas/scripts/: build-db.ts  build-geo.ts
(+129 files in other folders)
